--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@mantine/charts": "^7.4.1",
+    "@mantine/core": "7.4.1",
+    "@mantine/hooks": "7.4.1",
+    "lodash": "^4.17.21"
   },
   "scripts": {
     "start": "react-scripts start",
